ansible/playbooks/roles/staging/files/argo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  labels:
    app: argocd
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd-staging.korporate.org
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
